add random mask in transformer dataloader

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -9,11 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n"
+      "GPU available: True (cuda), used: True\n"
      ]
     },
     {
@@ -27,23 +23,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name           | Type             | Params\n",
       "----------------------------------------------------\n",
       "0 | loss_criterion | CrossEntropyLoss | 0     \n",
-      "1 | model          | TransformerModel | 5.6 M \n",
+      "1 | model          | TransformerModel | 8.8 M \n",
       "----------------------------------------------------\n",
-      "5.6 M     Trainable params\n",
+      "8.8 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "5.6 M     Total params\n",
-      "22.348    Total estimated model params size (MB)\n"
+      "8.8 M     Total params\n",
+      "35.101    Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "850afd6fa7c14b8db520bf6f34772a3e",
+       "model_id": "037e0d8d6b284112a20d41d40ef409ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,21 +58,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:0): loss=10.195943832397461, recall=0.0, mrr=0.0\n"
+      "Validation Set (@epoch:0): loss=10.200510025024414, recall=0.0, mrr=0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/workspace/recsys/transformer/model.py:69: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "/workspace/recsys/transformer/model.py:54: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  output = F.softmax(output)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "811ee372b7d4453d8648aecf4dc858c3",
+       "model_id": "4b7254bbcb8f4f069bd003c563355819",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a39df37db7be4ba9a1ea0784dadb63f3",
+       "model_id": "703bf0f19cc943c79b985ee9696b2802",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,13 +101,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:4): loss=10.030394554138184, recall=0.049173060804605484, mrr=0.01582658849656582\n"
+      "Validation Set (@epoch:0): loss=10.163952827453613, recall=0.031355079263448715, mrr=0.009362232871353626\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd9e2295e5ff48bfbfeff7db20274c75",
+       "model_id": "d585889e34f34c289555a268eff84412",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,13 +122,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:9): loss=9.980527877807617, recall=0.06639254093170166, mrr=0.017836788669228554\n"
+      "Validation Set (@epoch:1): loss=10.137596130371094, recall=0.04597039520740509, mrr=0.016060907393693924\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53a2f0f6b6564d7cab3a82d45efef03a",
+       "model_id": "9127a98d62ad4393a0450a524c477d08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,21 +138,69 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Set (@epoch:2): loss=10.11977481842041, recall=0.05540935695171356, mrr=0.018696904182434082\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f357d351db48409bb37d04f59ffe1f6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Set (@epoch:3): loss=10.107318878173828, recall=0.06128472089767456, mrr=0.019412927329540253\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "430260bf7bc44f14b780c7001665e03b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Set (@epoch:4): loss=10.098089218139648, recall=0.06473410129547119, mrr=0.019849706441164017\n"
+     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=15` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:14): loss=9.960836410522461, recall=0.06646107137203217, mrr=0.016986750066280365\n",
-      "CPU times: user 1min 39s, sys: 3.55 s, total: 1min 42s\n",
-      "Wall time: 1min 40s\n"
+      "CPU times: user 2min 2s, sys: 3.59 s, total: 2min 5s\n",
+      "Wall time: 2min 3s\n"
      ]
     }
    ],
@@ -175,15 +223,15 @@
     "    val_df,\n",
     "    test_df,\n",
     "    batch_size=256,\n",
-    "    max_session_length=10\n",
+    "    max_session_length=20\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
-    "    max_epochs=15,\n",
+    "    max_epochs=5,\n",
     "    callbacks=[TQDMProgressBar(refresh_rate=5)],\n",
     "    val_check_interval=1.0,\n",
     "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
-    "    check_val_every_n_epoch=5\n",
+    "    check_val_every_n_epoch=1\n",
     ")\n",
     "trainer.fit(model)"
    ]
@@ -205,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46a47fd7eab148aa909ab0cdf50658e8",
+       "model_id": "8b67858dea2a4dbba36b42fa5ae316f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Set: loss=9.964308738708496, recall=0.05967659875750542, mrr=0.015320654027163982\n"
+      "Testing Set: loss=10.101592063903809, recall=0.05816242843866348, mrr=0.01738354004919529\n"
      ]
     },
     {
