add demo application

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -6,13 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (cuda), used: True\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -23,10 +16,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n",
+      "Missing logger folder: saved_model/transformer/lightning_logs\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name           | Type             | Params\n",
@@ -43,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "037e0d8d6b284112a20d41d40ef409ea",
+       "model_id": "04742b7850aa427f9c39a2a5308cfcc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:0): loss=10.200510025024414, recall=0.0, mrr=0.0\n"
+      "Validation Set (@epoch:0): loss=10.203160285949707, recall=0.0, mrr=0.0\n"
      ]
     },
     {
@@ -72,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b7254bbcb8f4f069bd003c563355819",
+       "model_id": "8ff026a31d864643aafee9d2ffd2567e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "703bf0f19cc943c79b985ee9696b2802",
+       "model_id": "f68d86cb5d1f47b888ccbe6ef5dd7740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,13 +96,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:0): loss=10.163952827453613, recall=0.031355079263448715, mrr=0.009362232871353626\n"
+      "Validation Set (@epoch:0): loss=10.163493156433105, recall=0.01994243450462818, mrr=0.004764428362250328\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d585889e34f34c289555a268eff84412",
+       "model_id": "573594fe14e74d71be84c75f7b423dd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,13 +117,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:1): loss=10.137596130371094, recall=0.04597039520740509, mrr=0.016060907393693924\n"
+      "Validation Set (@epoch:1): loss=10.13674259185791, recall=0.03286275640130043, mrr=0.011156736873090267\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9127a98d62ad4393a0450a524c477d08",
+       "model_id": "3b72f3bdb8bc4b5f9a86c06d00ddfdc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,13 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:2): loss=10.11977481842041, recall=0.05540935695171356, mrr=0.018696904182434082\n"
+      "Validation Set (@epoch:2): loss=10.119050979614258, recall=0.04383223503828049, mrr=0.015336624346673489\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f357d351db48409bb37d04f59ffe1f6c",
+       "model_id": "3f060075784c4e00b0e60e9003a34fe4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,13 +159,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Set (@epoch:3): loss=10.107318878173828, recall=0.06128472089767456, mrr=0.019412927329540253\n"
+      "Validation Set (@epoch:3): loss=10.106876373291016, recall=0.05275493487715721, mrr=0.017913000658154488\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "430260bf7bc44f14b780c7001665e03b",
+       "model_id": "b9116808eba94cc59cc2a3f39d2a2930",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,13 +175,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation Set (@epoch:4): loss=10.098089218139648, recall=0.06473410129547119, mrr=0.019849706441164017\n"
-     ]
     },
     {
      "name": "stderr",
@@ -199,14 +187,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 2s, sys: 3.59 s, total: 2min 5s\n",
-      "Wall time: 2min 3s\n"
+      "Validation Set (@epoch:4): loss=10.097537994384766, recall=0.05454130470752716, mrr=0.018658485263586044\n",
+      "CPU times: user 1min 58s, sys: 8.51 s, total: 2min 7s\n",
+      "Wall time: 2min 4s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "from recsys.transformer.lit_model import LitTransformerModel\n",
+    "from recsys.preprocessor import save_product_id_mapper\n",
     "from pytorch_lightning import seed_everything, LightningModule, Trainer\n",
     "from pytorch_lightning.callbacks import TQDMProgressBar\n",
     "import pandas as pd\n",
@@ -225,13 +215,19 @@
     "    batch_size=256,\n",
     "    max_session_length=20\n",
     ")\n",
+    "saved_model_path = './saved_model/transformer/'\n",
+    "if not os.path.exists(saved_model_path):\n",
+    "    os.makedirs(saved_model_path)\n",
+    "\n",
+    "save_product_id_mapper(saved_model_path, model)\n",
     "\n",
     "trainer = Trainer(\n",
     "    max_epochs=5,\n",
     "    callbacks=[TQDMProgressBar(refresh_rate=5)],\n",
     "    val_check_interval=1.0,\n",
     "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
-    "    check_val_every_n_epoch=1\n",
+    "    check_val_every_n_epoch=1,\n",
+    "    default_root_dir=saved_model_path\n",
     ")\n",
     "trainer.fit(model)"
    ]
@@ -253,7 +249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b67858dea2a4dbba36b42fa5ae316f2",
+       "model_id": "c9c05873b70848b98f289f7e6dd3c4a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Set: loss=10.101592063903809, recall=0.05816242843866348, mrr=0.01738354004919529\n"
+      "Testing Set: loss=10.101299285888672, recall=0.04995930194854736, mrr=0.015423083677887917\n"
      ]
     },
     {
