--- a/gru.ipynb
+++ b/gru.ipynb
@@ -9,7 +9,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 12345\n",
+      "Global seed set to 12345\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_session_df.shape=(139356, 8), val_session_df.shape=(54866, 8), test_session_df.shape=(48327, 8)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/usr/local/lib/python3.8/dist-packages/torch/nn/modules/rnn.py:67: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
       "  warnings.warn(\"dropout option adds dropout after all but last \"\n",
       "GPU available: True (cuda), used: True\n",
@@ -17,6 +30,7 @@
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n",
+      "Missing logger folder: saved_model/gru_model/lightning_logs\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name           | Type     | Params\n",
@@ -33,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efff0119a9cd46989f786f192d73628d",
+       "model_id": "907c0559e2544182b838e32eeb98f7ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d73d95a92d9846948409108d88859ead",
+       "model_id": "b680ddcd871742cdb191efd8fd366ddf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92248f0b34194f829eff228790fbf90c",
+       "model_id": "d47958a931ba4b5893abf05e40a5642f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,18 +105,20 @@
      "output_type": "stream",
      "text": [
       "Validation Set (@epoch:29): loss=1.2293049097061157, recall=0.31153953075408936, mrr=0.1317371129989624\n",
-      "CPU times: user 6min 59s, sys: 22.6 s, total: 7min 21s\n",
-      "Wall time: 7min 1s\n"
+      "CPU times: user 6min 2s, sys: 56.4 s, total: 6min 58s\n",
+      "Wall time: 6min 37s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "from recsys.rnn.lit_model import LitGRUModel\n",
+    "from recsys.preprocessor import save_product_id_mapper\n",
     "from pytorch_lightning import seed_everything, LightningModule, Trainer\n",
     "from pytorch_lightning.callbacks import TQDMProgressBar\n",
     "import pandas as pd\n",
     "import torch\n",
+    "\n",
     "\n",
     "random_state = 12345\n",
     "seed_everything(random_state, workers=True)\n",
@@ -117,12 +133,19 @@
     "    test_df\n",
     ")\n",
     "\n",
+    "saved_model_path = './saved_model/gru_model/'\n",
+    "if not os.path.exists(saved_model_path):\n",
+    "    os.makedirs(saved_model_path)\n",
+    "\n",
+    "save_product_id_mapper(saved_model_path, model)\n",
+    "\n",
     "trainer = Trainer(\n",
     "    max_epochs=30,\n",
     "    callbacks=[TQDMProgressBar(refresh_rate=5)],\n",
     "    val_check_interval=1.0,\n",
     "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
-    "    check_val_every_n_epoch=30\n",
+    "    check_val_every_n_epoch=30,\n",
+    "    default_root_dir=saved_model_path\n",
     ")\n",
     "trainer.fit(model)"
    ]
@@ -144,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78e3eb93e8444074959c13e997e43690",
+       "model_id": "e159cc3a23274a50a7eef1371c4bd853",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,6 +199,13 @@
    "source": [
     "trainer.test(ckpt_path=\"last\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -196,7 +226,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
